@@ -252,3 +252,5 @@ Revision history for Perl extension ClearCase::Wrapper::MGi.
 	- mkview -clone: ensures the storage directory exists
 	- _Mkbco: removed a _Pbrtype check--couldn't find it justified
 	- refuse to archive already archived types
+	- removed lstype, now obsolete after RFE 12252 was delivered
+	  (fix for 7.1.1.9, 7.1.2.6 and 8.0.0.2, 16 Feb 2012)
